navigation bar, creature stats and prettify stuff

--- a/templates/den.html
+++ b/templates/den.html
@@ -8,6 +8,8 @@
   </head>
   <body>
 
+    {% include "navigation.html" %}
+
     <h1> This is Den </h1>
 
     <div class="d-flex flex-row flex-wrap">
